=== ongoing ===

=== 0.6 ===

- New setting: FREQUENTLY_REQUIRE_EMAIL
- Posting a message when the question has been submitted successfully

=== 0.5 ===

* New dependency: django-libs==1.17
* New setting: FREQUENTLY_ALLOW_ANONYMOUS

=== 0.4 ===

* Added new Entry instance to the email context so that we can point to the
  admin URL of the new entry.

=== 0.3 ===

* added fixed position to category model and improved admins

=== 0.2.2 ===

* Re-arranged submission form
* Save submitter's email to the database
* Changed static files, so they can be used anywhere

=== 0.2.1 ===

* Added *.js files to MANIFEST.in

=== 0.2 ===

* Added cms plugin to render a set of categories
* Created template tag to render a category
* Added a better feedback admin
* Added more statistics

=== 0.1 ===

Initial commit